# cerberus-bot

./: cerberus-bot.cabal  stack.yaml
Network/Telegram/API/Bot/: Main.hs
Network/Telegram/API/Bot/Cerberus/: Configuration.hs  Database.hs  Operations.hs  Server.hs
