name:                cerberus-bot
version:             0.1.0
synopsis:            ...
description:         ...
homepage:            https://github.com/iokasimov/cerberus-bot
license:             MIT
license-file:        LICENSE
extra-source-files:  CHANGELOG.md
author:              Murat Kasimov
maintainer:          Murat Kasimov <iokasimov.m@gmail.com>
copyright:           Copyright (c) 2019 Murat Kasimov
category:            Data, Control
build-type:          Simple
cabal-version:       >= 1.10

source-repository head
  type: git
  location: https://github.com/iokasimov/cerberus-bot.git

library
  exposed-modules:
    Network.Telegram.API.Bot.Cerberus.Configuration
    Network.Telegram.API.Bot.Cerberus.Database
    Network.Telegram.API.Bot.Cerberus.Server
  build-depends: base == 4.*, async, transformers, lens, text, warp,
    servant, servant-server, optparse-applicative, stm, wreq, telega, sqlite-simple
  default-extensions: GeneralizedNewtypeDeriving, NoImplicitPrelude, LambdaCase,
    OverloadedStrings, StandaloneDeriving, TypeApplications, ViewPatterns,
    ScopedTypeVariables, TypeOperators, DataKinds, PackageImports
  ghc-options: -Wall -fno-warn-tabs

executable bot
  main-is: Network/Telegram/API/Bot/Main.hs
  build-depends: cerberus-bot, base == 4.*, async, transformers, lens, text, warp,
    servant, servant-server, optparse-applicative, stm, wreq, telega, sqlite-simple
  default-extensions: GeneralizedNewtypeDeriving, NoImplicitPrelude, LambdaCase,
    OverloadedStrings, StandaloneDeriving, TypeApplications, ViewPatterns,
    ScopedTypeVariables, TypeOperators, DataKinds, PackageImports
  ghc-options: -Wall -fno-warn-tabs
